--- a/.gitconfig
+++ b/.gitconfig
@@ -4,3 +4,6 @@
 [core]
 	excludesfile = ~/.gitignore
 	autocrlf = input
+[filter "media"]
+	clean = git-media-clean %f
+	smudge = git-media-smudge %f
